<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp" android:layout_alignParentStart="true" android:layout_marginStart="0dp">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_list_own_groups"
                android:textColor="@color/primary" tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_editor_absoluteY="6dp"
                tools:layout_conversion_absoluteWidth="82dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>


    <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop= "40dp"/>

    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/text"/>
    <TextView
            android:id="@+id/eventAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="01/01/1991"
            android:layout_below="@+id/name"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"/>
    <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_create_location"
            android:layout_below="@+id/eventAt"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"/>
    <TextView
            android:id="@+id/nbPersonne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="1/8"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:layout_centerInParent="true"/>
    <Button
            android:id="@+id/buttonRejoindre"
            android:layout_width="111dp"
            android:layout_height="31dp"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_join"
            android:layout_below="@+id/nbPersonne"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="120dp"
            android:background="@color/primary"/>
</RelativeLayout>