<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/loginRL"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            android:src="@drawable/high5_login_bg" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_marginTop="0dp" android:layout_marginStart="0dp"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="873dp" android:layout_alignParentStart="true"
            android:layout_marginStart="0dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp">

        <TextView
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_alignParentStart="true"
                android:layout_marginStart="0dp" android:layout_alignParentTop="true" android:id="@+id/textView"
                android:layout_marginTop="33dp" tools:text="High5" android:fontFamily="@font/kaushan_script_regular"
                android:textSize="80sp" android:textColor="@color/primary" android:textStyle="bold"
                android:layout_above="@+id/btnFacebook" android:layout_marginBottom="24dp"/>
        <Button
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:drawableStart="@drawable/google_icon"
                android:layout_height="62sp"
                android:background="@color/google_background"
                android:text="@string/login_sign_in_with_google"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="25dp"
                android:layout_alignParentBottom="true" android:layout_marginBottom="98dp"
                android:layout_alignParentEnd="true"/>
        <Button
                android:id="@+id/btnFacebook"
                android:layout_width="551dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:drawableStart="@drawable/facebook_icon"
                android:layout_height="59dp"
                android:background="@color/facebook_background"
                android:text="@string/login_sign_in_with_facebook"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:visibility="invisible"
                android:layout_above="@+id/btnGoogle" android:layout_marginBottom="45dp"
                android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</RelativeLayout>
