<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/secondary"
            android:textColor="@color/text"
            android:text="@string/event_chat_title"
            android:gravity="center" android:id="@+id/textView6"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#dfdfdf"
            app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" android:id="@+id/view"/>

    <LinearLayout
            android:id="@+id/layout_chatbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:background="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

        <EditText
                android:id="@+id/edittext_chatbox"
                android:hint="Enter message"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxLines="6"/>

        <Button
                android:id="@+id/button_chatbox_send"
                android:text="@string/event_chat_send"
                android:textSize="14dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="bottom" />

    </LinearLayout>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/recycler_view_chat" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:translationZ="1000dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:transcriptMode="normal"
            android:stackFromBottom="true"
            android:divider="@color/common_google_signin_btn_text_dark_default"/>
    <Button
            android:text="@string/event_details"
            android:background="@color/primary"
            android:layout_width="78dp"
            android:layout_height="38dp"
            android:id="@+id/go_to_event_detail" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView6" android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
    />

</android.support.constraint.ConstraintLayout>