<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" tools:background="@color/secondary"
                                             android:background="@color/secondary" android:visibility="visible">

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigationView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:background="#343b4c"
            app:menu="@menu/bottom_bar"
            app:itemIconTint="#EFC32E"
            app:itemTextColor="#EFC32E"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/scrollView2"
    />
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:id="@+id/scrollView2"
            tools:background="@color/secondary"
            app:layout_constraintBottom_toTopOf="@+id/navigationView">
        <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/secondary"
                android:id="@+id/layout" android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


            <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:clickable="true"
                    app:civ_border_width="3dp"
                    app:civ_border_color="@color/primary"

                    android:id="@+id/profile"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="27dp"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/me" android:adjustViewBounds="false" android:cropToPadding="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="60dp"
                    android:layout_alignParentStart="true" android:layout_marginStart="60dp"/>

            <RelativeLayout

                    android:id="@+id/profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary"
                    android:layout_below="@+id/profile"
                    android:elevation="4dp"
                    android:paddingBottom="24dp">
                <TextView
                        android:text="monadress.prz@gmail.com"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/email"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:layout_marginTop="0dp" android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Benjamin Kastana "
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" android:layout_marginTop="8dp"
                        android:layout_centerHorizontal="true" android:layout_below="@+id/email"/>

                <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="Bruxelles"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/name" android:layout_below="@+id/name"/>
                <View
                        android:layout_width="200dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="9dp"
                        android:background="@color/primary"
                        app:layout_constraintTop_toBottomOf="@+id/location" android:layout_alignParentStart="true"
                        android:layout_marginStart="60dp" android:layout_alignParentEnd="true"
                        android:layout_marginEnd="60dp" android:layout_below="@+id/age"/>
                <TextView
                        android:text="21 ans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/age" android:layout_marginTop="15dp"
                        android:textColor="@android:color/white" android:layout_below="@+id/location"
                        android:layout_centerHorizontal="true"/>
            </RelativeLayout>


            <RelativeLayout
                    android:id="@+id/Infos"
                    android:layout_width="316dp"
                    android:layout_height="130dp"
                    android:layout_below="@+id/profile_layout"
                    android:layout_marginTop="-16dp"
                    android:background="@color/secondary"
                    android:layout_centerHorizontal="true"
                    android:elevation="4dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"

                    android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp">
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="-2dp"
                              android:layout_centerHorizontal="true"
                              android:id="@+id/participatedLine">
                    <TextView
                            android:text="@string/activity_profile_participated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"/>
                    <TextView
                            android:text="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/participated"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:textColor="@android:color/white"/>
                    <TextView
                            android:text="@string/activity_profile_event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"/>
                </LinearLayout>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="10dp"
                              android:layout_below="@+id/participatedLine"
                              android:layout_centerHorizontal="true">
                    <TextView
                            android:text="@string/activity_profile_created"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"/>

                    <TextView
                            android:text="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:id="@+id/created"
                            android:textColor="@android:color/white" />
                    <TextView
                            android:text="@string/activity_profile_event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
            <Button
                    android:text="@string/activity_profile_button_modifier"
                    android:layout_width="214dp"
                    android:layout_height="46dp" android:layout_alignParentStart="true"
                    android:layout_marginStart="101dp"
                    android:id="@+id/modify_account"
                    android:layout_below="@+id/Infos"
                    android:background="@color/primary"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="98dp"/>
            <Button
                    android:text="@string/disconnect"
                    android:layout_width="214dp"
                    android:layout_height="46dp" android:layout_alignParentStart="true"
                    android:layout_marginStart="101dp" android:id="@+id/Disconnect"
                    android:layout_marginTop="10dp" android:layout_below="@+id/modify_account"
                    android:background="@color/primary"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="98dp"/>
            <Button
                    android:text="@string/event_delete"
                    android:layout_width="214dp"
                    android:layout_height="46dp"
                    android:id="@+id/delete_account"
                    android:background="@color/google_background"
                    android:layout_marginStart="101dp"
                    android:layout_marginTop="10dp" android:layout_below="@+id/Disconnect"
                    android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                    android:layout_marginEnd="96dp" android:layout_marginBottom="110dp"/>
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>